--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
+@font-face {
+  font-family: 'JosefinSans-VariableFont_wght';
+  src: url("/assets/fonts/JosefinSans-VariableFont_wght.ttf");
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -28,6 +33,6 @@ body {
     }
 
     .card-body {
-        padding: 1rem 1.5rem; 
+        padding: 1rem 1.5rem;
     }
 }
