--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -1,7 +1,36 @@
-<h1>Dashboard</h1>
-<div class="card">
-    <div class="card-head">Lorem ipsum - dashboard</div>
-    <div class="card-body">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas ducimus soluta, quasi aut ipsa non, ullam enim rem repudiandae, vitae provident animi. Inventore rerum, voluptas optio dignissimos blanditiis modi illo!
+
+
+<div class="container">
+
+  <div class="box box1">
+    <div class="icon">
+      <img width="50" src="/assets/img/student-colored.png" alt="" srcset="">
     </div>
+    <div class="box-text">
+      <h3 class=" box-text-secondary ">  Etudiants </h3>
+      <h2 class=" box-text-primary "> {{nombreTotalEtudiant}} </h2>
+    </div>
+  </div>
+
+  <div class="box box2">
+    <div class="icon">
+      <img class="img-icon" width="50" src="/assets/img/employee-colored.png" alt="" srcset="">
+    </div>
+    <div class="box-text">
+      <h3 class=" box-text-secondary ">  Employées </h3>
+      <h2 class=" box-text-primary "> {{nombreTotalEmployee}} </h2>
+    </div>
+  </div>
+
+  <div class="box box3">
+    <div class="icon">
+      <img width="50" src="/assets/img/money.png" alt="" srcset="">
+    </div>
+    <div class="box-text">
+      <h3 class=" box-text-secondary ">  Revenues Total </h3>
+      <h2 class=" box-text-primary "> {{revenues}} dh </h2>
+    </div>
+  </div>
+
 </div>
+
