--- a/src/app/view/navbars/hornav/hornav.component.scss
+++ b/src/app/view/navbars/hornav/hornav.component.scss
@@ -1,8 +1,9 @@
 .container{
   position: relative;
+  margin-left: 20rem;
 }
 .hornav{
   background-color: red;
-  width: 100vw;
+  width: calc(100vw - 20rem);
   height: 6rem;
 }
