--- a/src/app/view/navbars/hornav/hornav.component.css
+++ b/src/app/view/navbars/hornav/hornav.component.css
@@ -1,10 +1,11 @@
 .container {
   position: relative;
+  margin-left: 20rem;
 }
 
 .hornav {
   background-color: red;
-  width: 100vw;
+  width: calc(100vw - 20rem);
   height: 6rem;
 }
 
