--- a/src/app/view/navbars/sidenav/sidenav.component.html
+++ b/src/app/view/navbars/sidenav/sidenav.component.html
@@ -1,12 +1,15 @@
 <div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed': ''">
     <div class="logo-container">
-      <img src="/assets/logo.png" alt="" srcset="" width="200">
+      <a [routerLink]="[navData[0].routeLink]" routerLinkActive="active" >
+        <img class="logo-img" src="/assets/logo.png" alt="" srcset="" width="200">
+      </a>
     </div>
     <ul class="sidenav-nav">
         <li class="sidenav-nav-item" *ngFor="let data of navData">
             <a class="sidenav-nav-link" [routerLink]="[data.routeLink]"
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{exact: true}"
+
             >
                 <i class="sidenav-link-icon" [class]="data.icon"></i>
                 <span  class="sidenav-link-text" @fadeInOut *ngIf="collapsed">
@@ -16,4 +19,5 @@
         </li>
     </ul>
 </div>
+
 
