--- a/src/app/view/navbars/sidenav/sidenav.component.scss
+++ b/src/app/view/navbars/sidenav/sidenav.component.scss
@@ -20,6 +20,11 @@ $primary-color: #42BA79;
         padding: 0.7rem 0.7rem 3rem;
 
 
+
+      .logo-img:hover{
+        cursor: pointer;
+      }
+
       .logo {
             background: #fff;
             text-align: center;
