--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
+:root
+{
+  --primary-color: #107637;
+  --secondary-color: #eeeeee;
+}
+
 @font-face {
   font-family: 'JosefinSans-VariableFont_wght';
   src: url("/assets/fonts/JosefinSans-VariableFont_wght.ttf");
