--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<p-tabMenu></p-tabMenu>
 <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
 <app-body
     [collapsed]="isSideNavCollapsed"
