--- a/src/app/view/communication/communication.component.html
+++ b/src/app/view/communication/communication.component.html
@@ -3,9 +3,11 @@
     <div class="nav-container">
 
       <div class="box-0">
-        <h1>Bienvenu</h1>
-        <h3 style="color:#6e91be"> {{formattedDate}} </h3>
-        <h2> Icone </h2>
+        <div class="text-container">
+          <h1 style="color:#595959">Bienvenu</h1>
+          <h4 style="color:#6e91be"> {{formattedDate}} </h4>
+        </div>
+        <i class="my-icon fas fa-plus"></i>
       </div>
 
       <div class="boxes-container">
