--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -3,47 +3,37 @@
 <div class="container">
 
   <a style="list-style-type: none; text-decoration: none" routerLink="/etudiant-list">
-    <div class="box box1">
-      <div class="icon">
-        <img width="50" src="/assets/img/student-colored.png" alt="" srcset="">
-      </div>
+    <div class="box">
+      <img width="50" src="/assets/img/student-colored.png">
       <div class="box-text">
         <h3 class=" box-text-secondary ">  Etudiants </h3>
         <h2 class=" box-text-primary "> {{nombreTotalEtudiant}} </h2>
       </div>
     </div>
-
   </a>
 
 
-  <div class="box box2">
-    <div class="icon">
-      <img class="img-icon" width="50" src="/assets/img/employee-colored.png" alt="" srcset="">
-    </div>
+  <div class="box">
+    <img width="50" src="/assets/img/employee-colored.png">
     <div class="box-text">
       <h3 class=" box-text-secondary ">  Employées </h3>
       <h2 class=" box-text-primary "> {{nombreTotalEmployee}} </h2>
     </div>
   </div>
 
-  <div class="box box3">
-    <div class="icon">
-      <img width="50" src="/assets/img/money.png" alt="" srcset="">
-    </div>
+  <div class="box">
+      <img width="50" src="/assets/img/money.png">
     <div class="box-text">
       <h3 class=" box-text-secondary ">  Revenues Total </h3>
       <h2 class=" box-text-primary "> {{revenues}} dh </h2>
     </div>
   </div>
-
-
 </div>
 
 <div class="container">
   <div class="pie-chart">
     <p-chart class="my-chart" width="300" type="doughnut" [data]="data" [options]="options"></p-chart>
   </div>
-
 </div>
 
 
