--- a/src/app/view/navbars/hornav/hornav.component.html
+++ b/src/app/view/navbars/hornav/hornav.component.html
@@ -1,6 +1,15 @@
 <div class="container">
   <div class="hornav">
-    <p>hornav works!</p>
+    <div>{{title}}</div>
+    <div class="input-wrapper">
+      <input class="my-input" type="text" placeholder="rechercher ..." />
+      <i class="my-icon fas fa-search"></i>
+    </div>
+    <i class="pi pi-bell" style="font-size: 2rem"></i>
+    <div class="img-container">
+      <img class="my-img" width="70" src="assets/Classe1/Fekrane.jpg" alt="" />
+    </div>
+    <h4>Rim</h4>
+    <h4>Benyadine</h4>
   </div>
 </div>
-
