--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -1,28 +1,23 @@
 .container {
+  padding: 2em;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  grid-column-gap: 5rem;
+  grid-column-gap: 3rem;
 }
 
 .box {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 15rem;
-  height: 6rem;
-  border-radius: 1.2rem;
+  width: 14rem;
+  height: 5rem;
+  border-radius: 1rem;
   background-color: white;
-}
-
-.icon {
-  padding: 10px;
 }
 
 .box:hover {
   cursor: pointer;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6); /* Increase the box shadow when the user hovers over the box */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
 }
 
 .box-text {
@@ -33,33 +28,25 @@
 }
 
 .box-text-primary {
-  white-space: nowrap; /* This will prevent line breaks within the text */
   color: #4b4242;
-  font-family: C059;
 }
 
 .box-text-secondary {
-  display: block; /* This will make the adjacent element appear on a new line */
   color: #6e91be;
 }
 
 .pie-chart {
-  background-color: red;
   box-sizing: border-box;
   margin-top: 2em;
   display: flex;
-}
-.pie-chart .my-chart {
   padding: 2em;
   border: 1px solid #888888;
   background-color: white;
 }
-.pie-chart .my-chart:hover {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6); /* Increase the box shadow when the user hovers over the box */
-}
 
-.calender .my-calender {
-  max-width: 100px;
+.pie-chart:hover {
+  cursor: pointer;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
 }
 
 /*# sourceMappingURL=dashboard.component.css.map */
